developer-team-2/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-team-2-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dev-team-2-app
  template:
    metadata:
      labels:
        app: dev-team-2-app
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          args:
            - /bin/sh
            - -c
            - echo "Dev Team 2 App" > /usr/share/nginx/html/index.html && exec nginx -g 'daemon off;'
---
apiVersion: v1
kind: Service
metadata:
  name: dev-team-2-app
  annotations:
    networking.gke.io/max-rate-per-endpoint: "100"
spec:
  selector:
    app: dev-team-2-app
  ports:
  - port: 8080
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-team-2-app-ext
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dev-team-2-app
      type: ext
  template:
    metadata:
      labels:
        app: dev-team-2-app
        type: ext
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          args:
            - /bin/sh
            - -c
            - echo "Dev Team 2 App EXT" > /usr/share/nginx/html/index.html && exec nginx -g 'daemon off;'
---
apiVersion: v1
kind: Service
metadata:
  name: dev-team-2-app-ext
  annotations:
    networking.gke.io/max-rate-per-endpoint: "100"
spec:
  selector:
    app: dev-team-2-app
    type: ext
  ports:
  - port: 8080
    targetPort: 80
